<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="be.dekade.weekplanner.ActiviteitDetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".NieuweActiviteitFragment">

            <TextView
                android:id="@+id/titel_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titel"
                android:textSize="@dimen/font_size"
                app:layout_constraintBottom_toBottomOf="@id/titel_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/titel_text" />

            <EditText
                android:id="@+id/titel_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/titel_hint"
                android:text="@={viewModel.activiteit.activiteit.titel}"
                app:layout_constraintEnd_toStartOf="@id/titel_voice_icon"
                app:layout_constraintStart_toEndOf="@id/titel_label"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageView
                android:id="@+id/titel_voice_icon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@id/titel_text"
                app:layout_constraintTop_toTopOf="@id/titel_text"
                app:layout_constraintBottom_toBottomOf="@id/titel_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@android:drawable/ic_btn_speak_now"
                android:onClick="@{() -> viewModel.startVoiceInputTitel()}" />

            <TextView
                android:id="@+id/notities_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notities"
                android:textSize="@dimen/font_size"
                app:layout_constraintBottom_toBottomOf="@id/notities_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/notities_text" />

            <EditText
                android:id="@+id/notities_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/vul_hier_bijkomende_informatie_in"
                android:inputType="textMultiLine"
                android:text="@={viewModel.activiteit.activiteit.notities}"
                app:layout_constraintEnd_toStartOf="@id/notities_voice_icon"
                app:layout_constraintStart_toEndOf="@id/notities_label"
                app:layout_constraintTop_toBottomOf="@id/titel_text" />

            <ImageView
                android:id="@+id/notities_voice_icon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@id/notities_text"
                app:layout_constraintTop_toTopOf="@id/notities_text"
                app:layout_constraintBottom_toBottomOf="@id/notities_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@android:drawable/ic_btn_speak_now"
                android:onClick="@{() -> viewModel.startVoiceInputNotities()}" />

            <TextView
                android:id="@+id/startuur_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startuur"
                android:textSize="@dimen/font_size"
                app:layout_constraintBottom_toBottomOf="@id/startuur_picker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/startuur_picker" />

            <TimePicker
                android:id="@+id/startuur_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                android:hour="@={viewModel.activiteit.activiteit.startuur}"
                android:minute="@={viewModel.activiteit.activiteit.startminuut}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/startuur_label"
                app:layout_constraintTop_toBottomOf="@id/notities_text" />

            <TextView
                android:id="@+id/herhalingsdagen_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/herhalingsdagen"
                android:textSize="@dimen/font_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/startuur_picker" />

            <CheckBox
                android:id="@+id/maandag_checkbox"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.maandag}"
                android:text="@string/maandag"
                android:textSize="@dimen/font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/startuur_picker" />

            <CheckBox
                android:id="@+id/dinsdag_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.dinsdag}"
                android:text="@string/dinsdag"
                android:textSize="@dimen/font_size"
                app:layout_constraintStart_toStartOf="@id/maandag_checkbox"
                app:layout_constraintTop_toBottomOf="@id/maandag_checkbox" />

            <CheckBox
                android:id="@+id/woensdag_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.woensdag}"
                android:text="@string/woensdag"
                android:textSize="@dimen/font_size"
                app:layout_constraintStart_toStartOf="@id/maandag_checkbox"
                app:layout_constraintTop_toBottomOf="@id/dinsdag_checkbox" />

            <CheckBox
                android:id="@+id/donderdag_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.donderdag}"
                android:text="@string/donderdag"
                android:textSize="@dimen/font_size"
                app:layout_constraintStart_toStartOf="@id/maandag_checkbox"
                app:layout_constraintTop_toBottomOf="@id/woensdag_checkbox" />

            <CheckBox
                android:id="@+id/vrijdag_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.vrijdag}"
                android:text="@string/vrijdag"
                android:textSize="@dimen/font_size"
                app:layout_constraintStart_toStartOf="@id/maandag_checkbox"
                app:layout_constraintTop_toBottomOf="@id/donderdag_checkbox" />

            <CheckBox
                android:id="@+id/zaterdag_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.zaterdag}"
                android:text="@string/zaterdag"
                android:textSize="@dimen/font_size"
                app:layout_constraintStart_toStartOf="@id/maandag_checkbox"
                app:layout_constraintTop_toBottomOf="@id/vrijdag_checkbox" />

            <CheckBox
                android:id="@+id/zondag_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.zondag}"
                android:text="@string/zondag"
                android:textSize="@dimen/font_size"
                app:layout_constraintStart_toStartOf="@id/maandag_checkbox"
                app:layout_constraintTop_toBottomOf="@id/zaterdag_checkbox" />

            <TextView
                android:id="@+id/notificatie_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notificaties_aan"
                android:textSize="@dimen/font_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/zondag_checkbox" />

            <CheckBox
                android:id="@+id/notificatie_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.activiteit.activiteit.notificatieAan}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/zondag_checkbox"
                />

            <Button
                android:id="@+id/bewaren_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_save"
                android:onClick="@{() ->viewModel.submitActiviteit()}"
                android:text="@string/bewaren"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/verwijderen_button"
                app:layout_constraintTop_toBottomOf="@id/notificatie_checkbox" />

            <Button
                android:id="@+id/verwijderen_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_delete"
                android:text="@string/verwijderen"
                app:layout_constraintEnd_toStartOf="@id/bewaren_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notificatie_checkbox" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>